--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stop Watch</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="stop-watch">
-            <div class="timer-digit">
-                <input type="text" value="00" class="display" id="hour">:
-                <input type="text" value="00" class="display" id="minute">:
-                <input type="text" value="00" class="display" id="secend">
-            </div>
-            <div class="timer-controls">
-                <button class="btn" id="pause">Pause</button>
-                <button class="btn" id="start">Start</button>
-                <button class="btn" id="reset">Reset</button>
-            </div>
-        </div>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <div class="stop-watch-container">
+      <div class="stop-watch-screen">
+        <h3 class="stop-watch-display" id="hour">00</h3>
+        <h3 class="colon">:</h3>
+        <h3 class="stop-watch-display" id="minute">00</h3>
+        <h3 class="colon">:</h3>
+        <h3 class="stop-watch-display" id="second">00</h3>
+        <!-- <h3 class="colon">:</h3>
+        <h3 class="display" id="miliSecond">00</h3> -->
+      </div>
+      <div class="stop-watch-controls">
+        <button class="stop-watch-button" id="pause" onclick="pauseTimer()">Pause</button>
+        <button class="stop-watch-button" id="start" onclick="startTimer()">Start</button>
+        <button class="stop-watch-button" id="reset" onclick="resetTimer()">Reset</button>
+      </div>
     </div>
-</body>
+  </body>
 </html>
