--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="logo-container">
-      <img src="./images/logo.jpg" alt="logo" class="logo" width="100px" />
+      <img src="./images/logo.jpg" alt="logo" class="logo" />
     </div>
     <h1 class="heading">PRO Timer</h1>
     <form class="stop-watch-container">
@@ -71,71 +71,110 @@
           />
         </div>
         <div class="stop-watch-direction">
-          <button
-            type="button"
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
             class="stop-watch-direction-button"
             id="up"
-            onclick="forwardTimer()"
-            title="Forward Timer"
-          ></button>
-          <button
-            type="button"
+            value="true"
+            onclick="timerDirection(true)"
+          >
+            <path
+              d="M21.75 40.4V16.3l-10.9 10.95-3.25-3.3L24 7.6l16.45 16.35-3.2 3.3L26.3 16.3v24.1Z"
+            />
+            <title>Forward Timer</title>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
             class="stop-watch-direction-button"
             id="down"
-            onclick="backwardTimer()"
-            title="Backward Timer"
-          ></button>
+            onclick="timerDirection(false)"
+          >
+            <path
+              d="M21.75 40.4V16.3l-10.9 10.95-3.25-3.3L24 7.6l16.45 16.35-3.2 3.3L26.3 16.3v24.1Z"
+            />
+            <title>Backward Timer</title>
+          </svg>
         </div>
       </div>
       <div class="stop-watch-controls">
-        <button
-          type="button"
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
           class="stop-watch-button"
           id="start"
-          onclick="startTimer()"
-          title="Start"
-        ></button>
-        <button
-          type="button"
+          value="false"
+          timer=""
+          onclick="startTimer(this.value)"
+        >
+          <path
+            d="M18.95 32.85 32.9 24l-13.95-8.9ZM24 45.05q-4.35 0-8.2-1.625-3.85-1.625-6.725-4.5Q6.2 36.05 4.575 32.2 2.95 28.35 2.95 24t1.625-8.2q1.625-3.85 4.5-6.725Q11.95 6.2 15.8 4.55q3.85-1.65 8.15-1.65 4.4 0 8.275 1.65t6.725 4.525q2.85 2.875 4.5 6.725 1.65 3.85 1.65 8.25 0 4.3-1.65 8.15-1.65 3.85-4.525 6.725-2.875 2.875-6.725 4.5-3.85 1.625-8.2 1.625Zm0-4.55q6.85 0 11.675-4.825Q40.5 30.85 40.5 24q0-6.85-4.825-11.675Q30.85 7.5 24 7.5q-6.85 0-11.675 4.825Q7.5 17.15 7.5 24q0 6.85 4.825 11.675Q17.15 40.5 24 40.5ZM24 24Z"
+          />
+          <title>Start</title>
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
           class="stop-watch-button"
           id="pause"
           onclick="pauseTimer()"
-          title="Stop"
-        ></button>
-        <button
-          type="button"
+        >
+          <path
+            d="M16.2 31.8h15.6V16.2H16.2ZM24 45.25q-4.4 0-8.275-1.65T8.95 39.05q-2.9-2.9-4.55-6.75T2.75 24q0-4.45 1.65-8.325 1.65-3.875 4.55-6.75t6.75-4.55Q19.55 2.7 24 2.7q4.45 0 8.325 1.675 3.875 1.675 6.75 4.55t4.55 6.75Q45.3 19.55 45.3 24q0 4.45-1.675 8.3-1.675 3.85-4.55 6.725-2.875 2.875-6.75 4.55Q28.45 45.25 24 45.25Zm.05-4.7q6.85 0 11.675-4.825Q40.55 30.9 40.55 23.95q0-6.85-4.825-11.675Q30.9 7.45 24 7.45q-6.9 0-11.725 4.825Q7.45 17.1 7.45 24q0 6.9 4.825 11.725Q17.1 40.55 24.05 40.55ZM24 24Z"
+          />
+          <title>Stop</title>
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
           class="stop-watch-button"
           id="reset"
           onclick="resetTimer()"
-          title="Reset"
-        ></button>
-        <button
-          type="button"
+        >
+          <path
+            d="M22.65 43.05q-6.65-.5-11.2-5.4Q6.9 32.75 6.9 26.1q0-3.95 1.85-7.5t5.1-5.85L17.1 16q-2.65 1.6-4.15 4.325-1.5 2.725-1.5 5.775 0 4.85 3.2 8.35t8 4Zm2.85 0v-4.6q4.9-.6 8-4.05 3.1-3.45 3.1-8.3 0-5-3.4-8.6-3.4-3.6-8.4-3.9h-1.15l3.25 3.3-2.45 2.5-8.25-8.3 8.25-8.35L26.9 5.2 23.1 9h1.2q7 0 11.95 5.025Q41.2 19.05 41.2 26.1q0 6.65-4.55 11.5T25.5 43.05Z"
+          />
+          <title>Reset</title>
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
           class="stop-watch-button"
           id="add"
-          onclick="addTimer()"
-          title="Set Time"
-        ></button>
+          value="false"
+          onclick="addTimer(this.value)"
+        >
+          <path
+            d="m39.65 14.95-6.3-6.25 1.95-2q.95-.95 2.325-.95 1.375 0 2.475 1l1.55 1.55q1.1 1.05.975 2.425Q42.5 12.1 41.55 13.05ZM37.6 17 12.25 42.35H6v-6.3L31.3 10.8Z"
+          />
+          <title>Set Time</title>
+        </svg>
       </div>
     </form>
     <div class="sub-stop-watch-container">
       <div class="sub-stop-watch"></div>
       <div class="sub-stop-watch">
-        <button
-          type="button"
-          id="circle"
-          title="Open"
-          onclick="showSubTimer()"
-        ></button>
-        <button
-          type="button"
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          id="open"
+          onclick="showOrHideSubTimer('none', 'flex')"
+          fill="white"
+          viewBox="0 0 100 100"
+        >
+          <path
+            d="M22.4 34.2h3.45v-8.3h8.35v-3.45h-8.35V13.8H22.4v8.65h-8.6v3.45h8.6ZM24 45.05q-4.35 0-8.2-1.625-3.85-1.625-6.725-4.5Q6.2 36.05 4.575 32.2 2.95 28.35 2.95 24q0-4.4 1.625-8.225 1.625-3.825 4.5-6.7T15.8 4.55Q19.65 2.9 24 2.9t8.225 1.65Q36.1 6.2 38.95 9.075q2.85 2.875 4.5 6.725 1.65 3.85 1.65 8.2 0 4.4-1.65 8.225-1.65 3.825-4.525 6.675-2.875 2.85-6.725 4.5-3.85 1.65-8.2 1.65Z"
+          />
+          <title>Open</title>
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
           id="close"
-          title="Close"
-          onclick="hideSubTimer()"
-        ></button>
+          onclick="showOrHideSubTimer('flex', 'none')"
+          fill="white"
+        >
+          <path
+            d="M12.45 38.7 9.3 35.55 20.85 24 9.3 12.5l3.15-3.2L24 20.8 35.55 9.3l3.15 3.2L27.2 24l11.5 11.55-3.15 3.15L24 27.2Z"
+          />
+          <title>Close</title>
+        </svg>
         <div class="sub-stop-watch-screen" id="sub-watch-screen">
           <div class="sub-stop-watch-digit">
-            <h6>H</h6>
+            <h6>Hours</h6>
             <input
               type="number"
               value="00"
@@ -148,7 +187,7 @@
           </div>
           <h6 class="sub-stop-watch-colon">:</h6>
           <div class="sub-stop-watch-digit">
-            <h6>M</h6>
+            <h6>Minutes</h6>
             <input
               type="number"
               value="00"
@@ -161,7 +200,7 @@
           </div>
           <h6 class="sub-stop-watch-colon">:</h6>
           <div class="sub-stop-watch-digit">
-            <h6>S</h6>
+            <h6>Seconds</h6>
             <input
               type="number"
               value="00"
@@ -174,20 +213,32 @@
           </div>
         </div>
         <div class="sub-stop-watch-controls" id="sub-watch-control">
-          <button
-            type="button"
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
             class="sub-stop-watch-button"
             id="sub-start"
-            onclick="startSubTimer()"
-            title="Start"
-          ></button>
-          <button
-            type="button"
+            value="false"
+            subTimer=""
+            onclick="startSubTimer(this.value)"
+          >
+            <path
+              id="sub-start-svg"
+              d="M18.95 32.85 32.9 24l-13.95-8.9ZM24 45.05q-4.35 0-8.2-1.625-3.85-1.625-6.725-4.5Q6.2 36.05 4.575 32.2 2.95 28.35 2.95 24t1.625-8.2q1.625-3.85 4.5-6.725Q11.95 6.2 15.8 4.55q3.85-1.65 8.15-1.65 4.4 0 8.275 1.65t6.725 4.525q2.85 2.875 4.5 6.725 1.65 3.85 1.65 8.25 0 4.3-1.65 8.15-1.65 3.85-4.525 6.725-2.875 2.875-6.725 4.5-3.85 1.625-8.2 1.625Zm0-4.55q6.85 0 11.675-4.825Q40.5 30.85 40.5 24q0-6.85-4.825-11.675Q30.85 7.5 24 7.5q-6.85 0-11.675 4.825Q7.5 17.15 7.5 24q0 6.85 4.825 11.675Q17.15 40.5 24 40.5ZM24 24Z"
+            />
+            <title>Start</title>
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
             class="sub-stop-watch-button"
             id="sub-reset"
             onclick="resetSubTimer()"
-            title="Reset"
-          ></button>
+          >
+            <path
+              id="sub-reset-svg"
+              d="M22.65 43.05q-6.65-.5-11.2-5.4Q6.9 32.75 6.9 26.1q0-3.95 1.85-7.5t5.1-5.85L17.1 16q-2.65 1.6-4.15 4.325-1.5 2.725-1.5 5.775 0 4.85 3.2 8.35t8 4Zm2.85 0v-4.6q4.9-.6 8-4.05 3.1-3.45 3.1-8.3 0-5-3.4-8.6-3.4-3.6-8.4-3.9h-1.15l3.25 3.3-2.45 2.5-8.25-8.3 8.25-8.35L26.9 5.2 23.1 9h1.2q7 0 11.95 5.025Q41.2 19.05 41.2 26.1q0 6.65-4.55 11.5T25.5 43.05Z"
+            />
+            <title>Reset</title>
+          </svg>
         </div>
       </div>
       <div class="sub-stop-watch"></div>
