--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
-  <body>
-    <div class="logo-container">
-      <img src="./images/logo.jpg" alt="logo" class="logo" />
-    </div>
+  <body onload="getTimerHistory()">
+    <img src="./images/logo.jpg" alt="logo" class="logo" />
     <h1 class="heading">PRO Timer</h1>
     <form class="stop-watch-container">
       <div class="stop-watch-screen">
@@ -58,7 +56,7 @@
         </div>
         <h6 class="stop-watch-colon">:</h6>
         <div class="stop-watch-digit">
-          <h6>Milli Seconds</h6>
+          <h6>MiliSecs</h6>
           <input
             type="number"
             oninput="this.value = this.value.length > 2 ? this.value.slice(0, 2) : this.value"
@@ -147,7 +145,11 @@
       </div>
     </form>
     <div class="sub-stop-watch-container">
-      <div class="sub-stop-watch"></div>
+      <div class="current-date">
+        <h2 class="date-heading">Date & Time</h2>
+        <p id="current-date"></p>
+        <p id="current-time"></p>
+      </div>
       <div class="sub-stop-watch">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -174,7 +176,7 @@
         </svg>
         <div class="sub-stop-watch-screen" id="sub-watch-screen">
           <div class="sub-stop-watch-digit">
-            <h6>Hours</h6>
+            <h6>Hour</h6>
             <input
               type="number"
               value="00"
@@ -187,7 +189,7 @@
           </div>
           <h6 class="sub-stop-watch-colon">:</h6>
           <div class="sub-stop-watch-digit">
-            <h6>Minutes</h6>
+            <h6>Minute</h6>
             <input
               type="number"
               value="00"
@@ -200,7 +202,7 @@
           </div>
           <h6 class="sub-stop-watch-colon">:</h6>
           <div class="sub-stop-watch-digit">
-            <h6>Seconds</h6>
+            <h6>Second</h6>
             <input
               type="number"
               value="00"
@@ -241,7 +243,10 @@
           </svg>
         </div>
       </div>
-      <div class="sub-stop-watch"></div>
+      <div class="stop-watch-history">
+        <h2 class="history-heading">History</h2>
+        <div id="history" class="stop-watch-history-data"></div>
+      </div>
     </div>
   </body>
 </html>
